week4/blocks.txt
# can pass a block to anything- its up to the method defintion to use a block or not
#{}
# do <code> end
# Can call with:
# - yield
# - call
# - block_given?
# blocks with parms
# yield(x)    call(x)  {|x|}    do |x| <code> end


C:\Projects\RubyFall2012\week4>irb
irb(main):001:0> def hello
irb(main):002:1> yield
irb(main):003:1> end
=> nil
irb(main):004:0> hello
LocalJumpError: no block given (yield)
        from (irb):2:in `hello'
        from (irb):4
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):005:0> #no block was passed in but yield expected it
irb(main):006:0* exit

C:\Projects\RubyFall2012\week4>irb
irb(main):001:0> def hello
irb(main):002:1> yeild
irb(main):003:1> yield
irb(main):004:1> end
=> nil
irb(main):005:0> hello
NameError: undefined local variable or method `yeild' for main:Object
        from (irb):2:in `hello'
        from (irb):5
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):006:0> def hello
irb(main):007:1> yield
irb(main):008:1> end
=> nil
irb(main):009:0> hello {puts "hi"}
hi
=> nil
irb(main):010:0> #yield calls the passed in block, so am defining this method on the fly
irb(main):011:0* ^C
irb(main):011:0> hello {puts 1+1}
2
=> nil
irb(main):012:0> puts nil

=> nil
irb(main):013:0> hello {puts hello{puts "hi"}}
hi

=> nil
irb(main):014:0> test=1
=> 1
irb(main):015:0> hello (test = hello{puts "hi"}}
SyntaxError: (irb):15: syntax error, unexpected '}', expecting ')'
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):016:0> hello {test = hello{puts "hi"}}
hi
=> nil
irb(main):017:0> hello {test = hello{6}}
=> 6
irb(main):018:0> test
=> 6
irb(main):019:0> def repeat
irb(main):020:1> yield
irb(main):021:1> yield
irb(main):022:1> end
=> nil
irb(main):023:0> repeat{"hello"}
=> "hello"
irb(main):024:0> repeat{puts "hello"}
hello
hello
=> nil
irb(main):025:0> def repeat(times)
irb(main):026:1> end
=> nil
irb(main):027:0> def repeat(n)
irb(main):028:1> n.times {yield}
irb(main):029:1> end
=> nil
irb(main):030:0> repeat(8){puts "hi"}
hi
hi
hi
hi
hi
hi
hi
hi
=> 8
irb(main):031:0> def monsters
irb(main):032:1> vamp=:vampire
irb(main):033:1> zombie =:zombie
irb(main):034:1> yield(vamp,zombie)
irb(main):035:1> [vamp, zombie]
irb(main):036:1> end
=> nil
irb(main):037:0> monsters do |x,y\
irb(main):038:1* puts "hi"
irb(main):039:1> end
SyntaxError: (irb):38: syntax error, unexpected tIDENTIFIER, expecting '|'
puts "hi"
    ^
(irb):39: syntax error, unexpected keyword_end, expecting $end
        from C:/RailsInstaller/Ruby1.9.3/bin/irb:12:in `<main>'
irb(main):040:0> monsters do |x,y|
irb(main):041:1* puts "hi"
irb(main):042:1> end
hi
=> [:vampire, :zombie]
irb(main):043:0>